<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_header"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sub_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_sub_header"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/text_header" />

    <LinearLayout
        android:id="@+id/layout_basket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_sub_header"
        android:layout_marginTop="16dp"

    >

        <TextView
            android:id="@+id/text_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_total_order"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_weight="1"

            />

            <Button
                android:id="@+id/button_finalize_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_finalize_order_disable"
                android:text="@string/button_finalize_order"
                android:textColor="@color/white"
                android:textStyle="bold"
                />


    </LinearLayout>


    <Button
        android:id="@+id/button_appetizers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#00B53211"
        android:text="@string/button_appetizers"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/button_main_courses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_basket"
        android:textColor="@color/gray"
        />

    <Button
        android:id="@+id/button_main_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_main_courses"
        app:layout_constraintStart_toEndOf="@id/button_appetizers"
        app:layout_constraintTop_toBottomOf="@id/layout_basket"
        app:layout_constraintEnd_toStartOf="@id/button_beverages"
        android:backgroundTint="#00FFFFFF"
        android:textColor="@color/gray"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button_beverages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_beverages"
        app:layout_constraintStart_toEndOf="@id/button_main_courses"
        app:layout_constraintTop_toBottomOf="@id/layout_basket"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#00FFFFFF"
        android:textColor="@color/gray"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button_desserts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_desserts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_courses"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#00FFFFFF"
        android:textColor="@color/gray"
        android:textStyle="bold"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_desserts"
        app:layout_constraintVertical_bias="0.0"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
